<resources>
    <string name="app_name">StoryApp</string>
    <string name="hint_name">Masukkan Nama Anda</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="tv_register">Register</string>
    <string name="tv_login">Login</string>
    <string name="stories">Stories</string>
    <string name="add_story">Add Story</string>
    <string name="photo_detail">Photo Detail</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="cd_button_add_story">Button Add Story</string>
    <string name="cd_button_logout">Button LogOut</string>
    <string name="cd_button_map">Button Map</string>
    <string name="retry">Please Retry</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="story_description">Story Description</string>
    <string name="upload_story">Upload Story</string>
    <string name="preview_image">Preview Image</string>
</resources>